--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-    <!--Cabecera-->
-    <div class="info">
-        <div class="icons">
-            <a href="" class="active"><i class="fa-regular fa-envelope"></i>turismo@email.com</a>
-            <a href="" class="active"><i class="fa-solid fa-phone"></i>+51 989756745</a>
-        </div> 
-    </div>  
     <header>
         <div class="logo">
             <img src="img/pngegg.png" alt="Logo">
@@ -236,11 +229,43 @@
         <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
     </footer>
 
+    <div class="contact-logo">
+        <i class="fa fa-user" id="contact-logo" style="color: #fff;"></i>
+        <div class="contact-info" id="contact-info">
+            <h3 class="title">Canales de Comunicación</h3>
+            <a href="https://api.whatsapp.com/" target="_blank" class="contact" id="whatsapp-button">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <a href="mailto:info@example.com" class="contact" id="contact-button">
+                <i class="fa-solid fa-envelope"></i> Contacto
+            </a>
+        </div>
+    </div>
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="swiper-bundle.min.js"></script>
     <script src="main.js"></script>
+    <script>
+        document.addEventListener('click', function(event) {
+            var contactLogo = document.getElementById('contact-logo');
+            var contactInfo = document.getElementById('contact-info');
+
+            if (event.target !== contactLogo && !contactInfo.contains(event.target)) {
+                contactInfo.style.display = 'none';
+            }
+        });
+
+        document.getElementById('contact-logo').addEventListener('click', function() {
+            var contactInfo = document.getElementById('contact-info');
+            if (contactInfo.style.display === 'none') {
+                contactInfo.style.display = 'block';
+            } else {
+                contactInfo.style.display = 'none';
+            }
+        });
+    </script>
     <script>
         hamburguer = document.querySelector(".hamburguer");
         hamburguer.onclick = function() {
