--- a/paginas/Nosotros/index.html
+++ b/paginas/Nosotros/index.html
@@ -12,12 +12,6 @@
 </head>
 <body>
      <!--Cabecera-->
-     <div class="info">
-        <div class="icons">
-            <a href="" class="active"><i class="fa-regular fa-envelope"></i>turismo@email.com</a>
-            <a href="" class="active"><i class="fa-solid fa-phone"></i>+51 989756745</a>
-        </div> 
-    </div>  
     <header>
         <div class="logo">
             <img src="../../img/pngegg.png" alt="Logo">
@@ -132,6 +126,20 @@
         <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
     </footer>
 
+    <div class="contact-logo">
+        <i class="fa fa-user" id="contact-logo" style="color: #fff;"></i>
+        <div class="contact-info" id="contact-info">
+            <h3 class="title">Canales de Comunicación</h3>
+            <a href="https://api.whatsapp.com/" target="_blank" class="contact" id="whatsapp-button">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <a href="mailto:info@example.com" class="contact" id="contact-button">
+                <i class="fa-solid fa-envelope"></i> Contacto
+            </a>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
     <script>
         hamburguer = document.querySelector(".hamburguer");
         hamburguer.onclick = function() {
