--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Servicio Bervip</title>
 </head>
 <body>
-    <!--Cabecera-->
-    <div class="info">
-        <div class="icons">
-            <a href="" class="active"><i class="fa-regular fa-envelope"></i>turismo@email.com</a>
-            <a href="" class="active"><i class="fa-solid fa-phone"></i>+51 989756745</a>
-        </div> 
-    </div>  
+    <!--Cabecera--> 
     <header>
         <div class="logo">
             <img src="../../img/pngegg.png" alt="Logo">
@@ -150,6 +145,20 @@
         <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
     </footer>
 
+    <div class="contact-logo">
+        <i class="fa fa-user" id="contact-logo" style="color: #fff;"></i>
+        <div class="contact-info" id="contact-info">
+            <h3 class="title">Canales de Comunicación</h3>
+            <a href="https://api.whatsapp.com/" target="_blank" class="contact" id="whatsapp-button">
+                <i class="fab fa-whatsapp"></i> WhatsApp
+            </a>
+            <a href="mailto:info@example.com" class="contact" id="contact-button">
+                <i class="fa-solid fa-envelope"></i> Contacto
+            </a>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
     <script>
         hamburguer = document.querySelector(".hamburguer");
         hamburguer.onclick = function() {
