--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/pngegg.png" alt="Logo">
+            <img src="./img/bervic.png" alt="Logo">
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -23,19 +23,16 @@
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="" class="active">Inicio</a>
+                    <a href="./index.html" class="active">Inicio</a>
                 </li>
                 <li>
-                    <a href="paginas/Nosotros/index.html" class="active">Nosotros</a>
+                    <a href="./paginas/Nosotros/index.html" class="active">Nosotros</a>
                 </li>
                 <li>
                     <a href="./paginas/Servicios/index.html" class="active">Servicios</a>
                 </li>
                 <li>
-                    <a href="paginas/Contacto/index.html" class="active">Contactanos</a>
-                </li>
-                <li>
-                    <a href="" class="active"><i class="fa-brands fa-whatsapp"></i></i></a>
+                    <a href="./paginas/Contacto/index.html" class="active">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -74,7 +71,7 @@
                         tu viaje sea inolvidable. Con nuestro equipo apasionado y dedicado, te garantizamos experiencias auténticas y 
                         memorables. Únete a nosotros y comienza tu viaje hoy mismo.
                     </p>
-                    <a href="">Leer mas</a>
+                    <a href="./paginas/Nosotros/index.html">Leer mas</a>
                 </div>
             </div>
         </div>
@@ -119,7 +116,7 @@
                     ¡Descubre destinos emocionantes con nuestro servicio de transporte turístico! 
                     Comodidad, seguridad y aventura en cada viaje.
                 </p>
-                <button>Contactanos</button>
+                <a href="./paginas/Contacto/index.html"><button>Contáctanos</button></a>
             </div>
         </div>
     </section>
@@ -212,9 +209,8 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="img/pngegg.png" alt="" class="logo1">
+        <img src="./img/bervic.png" alt="" class="logo1">
         <div class="social-icons-container">
-            <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
@@ -222,11 +218,10 @@
         <ul class="footer-menu-container">
             <li class="menu-item">Inicio</li>
             <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio Transporte</li>
-            <li class="menu-item">Servicio Turistico</li>
+            <li class="menu-item">Servicio de Transporte</li>
             <li class="menu-item">Contacto</li>
         </ul>
-        <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
+        <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
 
     <div class="contact-logo">
