--- a/paginas/Contacto/index.html
+++ b/paginas/Contacto/index.html
@@ -13,7 +13,7 @@
     <!--Cabecera-->
     <header>
         <div class="logo">
-            <img src="../../img/pngegg.png" alt="Logo">
+            <img src="../../img/bervic.png" alt="Logo">
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -29,13 +29,10 @@
                     <a href="../Nosotros/index.html" class="active">Nosotros</a>
                 </li>
                 <li>
-                    <a href="" class="active">Servicios</a>
+                    <a href="../Servicios/index.html" class="active">Servicios</a>
                 </li>
                 <li>
-                    <a href="" class="active">Contactanos</a>
-                </li>
-                <li>
-                    <a href="" class="active"><i class="fa-brands fa-whatsapp"></i></i></a>
+                    <a href="../Contacto/index.html" class="active">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -96,7 +93,7 @@
                 <div class="infoBox">
                     <div>
                         <span><ion-icon name="location"></ion-icon></span>
-                        <p>San Isidro, Lima <br>Peru</p>
+                        <p>Santa Anita, Lima <br>Peru</p>
                     </div>
                     <div>
                         <span><ion-icon name="mail"></ion-icon></span>
@@ -109,8 +106,7 @@
                     <!--social media Links-->
                     <ul class="sci">
                         <li><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
-                        <li><a href=""><ion-icon name="logo-twitter"></ion-icon></a></li>
-                        <li><a href=""><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                        <li><a href=""><ion-icon name="logo-tiktok"></ion-icon></a></li>
                         <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
                     </ul>
                 </div>
@@ -126,9 +122,8 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="img/pngegg.png" alt="" class="logo1">
+        <img src="../../img/bervic.png" alt="" class="logo1">
         <div class="social-icons-container">
-            <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
@@ -136,11 +131,10 @@
         <ul class="footer-menu-container">
             <li class="menu-item">Inicio</li>
             <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio Transporte</li>
-            <li class="menu-item">Servicio Turistico</li>
+            <li class="menu-item">Servicio de Transporte</li>
             <li class="menu-item">Contacto</li>
         </ul>
-        <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
+        <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
