--- a/paginas/Nosotros/index.html
+++ b/paginas/Nosotros/index.html
@@ -14,7 +14,7 @@
      <!--Cabecera-->
     <header>
         <div class="logo">
-            <img src="../../img/pngegg.png" alt="Logo">
+            <img src="../../img/bervic.png" alt="Logo">
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -27,16 +27,13 @@
                     <a href="../../index.html" class="active">Inicio</a>
                 </li>
                 <li>
-                    <a href="" class="active">Nosotros</a>
+                    <a href="../Nosotros/index.html" class="active">Nosotros</a>
                 </li>
                 <li>
-                    <a href="" class="active">Servicios</a>
+                    <a href="../Servicios/index.html" class="active">Servicios</a>
                 </li>
                 <li>
-                    <a href="../Contacto/index.html" class="active">Contactanos</a>
-                </li>
-                <li>
-                    <a href="" class="active"><i class="fa-brands fa-whatsapp"></i></i></a>
+                    <a href="../Contacto/index.html" class="active">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -54,14 +51,12 @@
                     Bienvenidos a Bervic Tour: Tu Puerta de Entrada al Mundo del Turismo y Transporte.
                     En Bervic Tour, nos enorgullece ser tu compañero confiable en el emocionante mundo del turismo y el transporte. 
                     Con un enfoque dedicado en ofrecer servicios excepcionales, estamos aquí para hacer de cada viaje una experiencia inolvidable.
-                    Ya sea que estés buscando explorar destinos exóticos, sumergirte en la cultura local o simplemente relajarte en un cómodo traslado, 
-                    en Bervic Tour nos esforzamos por superar tus expectativas en cada paso del camino.
                     Nuestro compromiso con la excelencia y la atención al cliente nos distingue. Únete a nosotros y descubre cómo podemos hacer que tu próxima aventura sea extraordinaria. En Bervic Tour, tu satisfacción es nuestra prioridad número uno.
                 </p>
                 <div class="skills">
-                    <span>Transporte</span>
-                    <span>Turistico</span>
-                    <span>Contacto</span>
+                    <span>Seguridad</span>
+                    <span>Flexibilidad</span>
+                    <span>Puntualidad</span>
                 </div>
             </div>
         </div>
@@ -101,17 +96,16 @@
     <!--Banner-->
     <div class="banner">
         <div class="conten">
-            <h3>Ven con nosotros</h3>
+            <h3>Transporte y turismo a tu medida</h3>
             <p>"¡Comencemos la aventura juntos! Descubre nuevos horizontes y <br> experiencias emocionantes con nosotros."</p>
-            <a href="" class="btn">Contactanos</a>
+            <a href="../Contacto/index.html" class="btn">Contáctanos</a>
         </div>
     </div>
 
     <!--FOOTER-->
     <footer>
-        <img src="../../img/pngegg.png" alt="" class="logo1">
+        <img src="../../img/bervic.png" alt="" class="logo1">
         <div class="social-icons-container">
-            <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
@@ -119,11 +113,10 @@
         <ul class="footer-menu-container">
             <li class="menu-item">Inicio</li>
             <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio Transporte</li>
-            <li class="menu-item">Servicio Turistico</li>
+            <li class="menu-item">Servicio de Transporte</li>
             <li class="menu-item">Contacto</li>
         </ul>
-        <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
+        <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
 
     <div class="contact-logo">
