--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -11,7 +11,7 @@
     <!--Cabecera--> 
     <header>
         <div class="logo">
-            <img src="../../img/pngegg.png" alt="Logo">
+            <img src="../../img/bervic.png" alt="Logo">
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -24,16 +24,13 @@
                     <a href="../../index.html" class="active">Inicio</a>
                 </li>
                 <li>
-                    <a href="" class="active">Nosotros</a>
+                    <a href="../Nosotros/index.html" class="active">Nosotros</a>
                 </li>
                 <li>
-                    <a href="" class="active">Servicios</a>
+                    <a href="../Servicios/index.html" class="active">Servicios</a>
                 </li>
                 <li>
-                    <a href="../Contacto/index.html" class="active">Contactanos</a>
-                </li>
-                <li>
-                    <a href="" class="active"><i class="fa-brands fa-whatsapp"></i></i></a>
+                    <a href="../Contacto/index.html" class="active">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -126,11 +123,19 @@
         </main>
     </div>
 
+    <!--Banner-->
+    <div class="banner">
+        <div class="conten">
+            <h3>Tu viaje soñado comienza aquí</h3>
+            <p>"¡Comencemos la aventura juntos! Descubre nuevos horizontes y <br> experiencias emocionantes con nosotros."</p>
+            <a href="../Contacto/index.html" class="btn">Contáctanos</a>
+        </div>
+    </div>
+
     <!--FOOTER-->
     <footer>
-        <img src="../../img/pngegg.png" alt="" class="logo1">
+        <img src="../../img/bervic.png" alt="" class="logo1">
         <div class="social-icons-container">
-            <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
@@ -138,11 +143,10 @@
         <ul class="footer-menu-container">
             <li class="menu-item">Inicio</li>
             <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio Transporte</li>
-            <li class="menu-item">Servicio Turistico</li>
+            <li class="menu-item">Servicio de Transporte</li>
             <li class="menu-item">Contacto</li>
         </ul>
-        <span class="copyright">&copy;2024, Diseñado y creado por: Alonso Q.F y Jesus R.M</span>
+        <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
 
     <div class="contact-logo">
