--- a/index.html
+++ b/index.html
@@ -76,47 +76,33 @@
             </div>
         </div>
     </section>
-    
+
     <!--BANNER - TRANSPORTE-->
     <section class="servicio">
-        <div class="contenedor" style="background: #4989A2;">
-            <div class="texto-servicio">
-                <h2>Servicio Transporte</h2>
-                <p>Descubre [Nombre de la Empresa], tu opción confiable para traslados impecables. Nuestra flota moderna, 
-                    conductores profesionales y enfoque en la excelencia garantizan tu tranquilidad en cada viaje. Simplifica 
-                    tus desplazamientos con [Nombre de la Empresa] hoy mismo.</p>
+        <div class="titulo">
+            <h1>Te ofrecemos lo mejor</h1>
+        </div>
+        <div class="grupos">
+            <div class="bloque">
+                <div class="bloque-contenido">
+                    <h2 class="bloque-heading">Traslado al aeropuerto</h2>
+                    <p class="bloque-texto">Ofrecemos un <strong>servicio de traslado al aeropuerto</strong> que combina comodidad y eficiencia con un toque de atención personalizada.</p>
+                </div>
             </div>
-            <div class="imagen-servicio">
-                <img src="img/servicio-de-transporte.jpg" alt="Imagen de ejemplo">
-            </div>
+            <div class="bloque"></div>
         </div>
     </section>
+
 
     <!--BANNER - TURISTICO-->
     <section class="servicio">
-        <div class="contenedor reverse" style="background-color: #D9DC58;">
-            <div class="imagen-servicio">
-                <img src="img/servicio-turistico2.jpg" alt="Imagen de ejemplo">
-            </div>
-            <div class="texto-servicio">
-                <h2>Servicio Turistico</h2>
-                <p>Explora destinos sin preocupaciones con [Nombre de la Empresa Turística]. Nuestros tours guiados ofrecen experiencias 
-                    inolvidables, desde paisajes impresionantes hasta culturas vibrantes. Descubre el mundo con comodidad y seguridad junto 
-                    a nosotros.</p>
-            </div>
-        </div>
-    </section>
-
-    <!--BANNER-->
-    <section class="banner__container">
-        <div class="section__container">
-            <div class="banner__content">
-                <h2>Viaja con nosotros 100% seguros.</h2>
-                <p>
-                    ¡Descubre destinos emocionantes con nuestro servicio de transporte turístico! 
-                    Comodidad, seguridad y aventura en cada viaje.
-                </p>
-                <a href="./paginas/Contacto/index.html"><button>Contáctanos</button></a>
+        <div class="grupos">
+            <div class="bloques"></div>
+            <div class="bloques">
+                <div class="bloque-contenido">
+                    <h2 class="bloque-heading">City Tour Lima</h2>
+                    <p class="bloque-texto">Con Bervic, descubre los lugares más históricos e importantes de la capital peruana mientras te desplazas con total comodidad y seguridad en nuestro <strong>servicio de city tour.</strong></p>
+                </div>
             </div>
         </div>
     </section>
@@ -205,7 +191,17 @@
             </div>
         </div>
     </section>
+    
+    <!--Banner-->
+    <div class="banner">
+        <div class="conten">
+            <h3>Transporte y turismo a tu medida</h3>
+            <p>"¡Comencemos la aventura juntos! Descubre nuevos horizontes y <br> experiencias emocionantes con nosotros."</p>
+            <a href="../Contacto/index.html" class="btn">Contáctanos</a>
+        </div>
+    </div>
 
+    <br><br><br><br><br><br>
 
     <!--FOOTER-->
     <footer>
