cambios por aprobar

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h2>Galería</h2>
         <div class="galeria">
             <div class="imagen">
-                <img src="img/10.jpg"imagen galeria">
+                <img src="img/2.jpeg"imagen galeria">
             </div>
 
             <div class="imagen">
@@ -171,7 +171,7 @@
             </div>
 
             <div class="imagen">
-                <img src="img/33.jpg" alt="imagen galeria">
+                <img src="img/4.jpeg" alt="imagen galeria">
             </div>
 
             <div class="imagen">
@@ -183,7 +183,7 @@
             </div>
 
             <div class="imagen">
-                <img src="img/88.jpg" alt="imagen galeria">
+                <img src="img/3.jpeg" alt="imagen galeria">
             </div>
 
             <div class="imagen">
