--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <main class="grid">
             <article>
-                <img src="./transporte.jpg" alt="servicio de traslado">
+                <img src="./transporte.webp" alt="servicio de traslado">
                 <div class="text">
                     <h3>Servicio Traslado</h3>
                     <p>Viajes seguros y cómodos. Reserva ahora para un transporte confiable y puntual. ¡Disfruta de un viaje sin preocupaciones!</p>
@@ -60,29 +60,29 @@
             </article>
 
             <article>
-                <img src="./perso.jpg" alt="servicio especiales">
+                <img src="./perso.webp" alt="servicio especiales">
                 <div class="text">
                     <h3>Servicio Personalizados</h3>
-                    <p>Ofrecemos atención exclusiva y eficiente en transporte, adaptándonos a tus necesidades para un servicio personalizado excepcional.</p>
-                    <a href="./paginas/Servicio-Transporte/Servicio-Especiales/index.html"><button>Cotizar ahora</button></a>
+                    <p>Ofrecemos una atención exclusiva, adaptándonos a tus necesidades para un servicio personalizado excepcional.</p>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%personalizado"><button>Cotizar ahora</button></a>
                 </div>
             </article>
 
             <article>
-                <img src="./carga.avif" alt="servicio de carga">
+                <img src="./carga.webp" alt="servicio de carga">
                 <div class="text">
                     <h3>servicio de carga</h3>
                     <p>Aseguramos la puntualidad y seguridad de tus envíos de carga con nuestro servicio logístico personalizado y confiable. </p>
-                    <a href="./paginas/Servicio-Transporte/Servicio-Citytour/index.html"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20carga"><button>Cotizar ahora</button></a>
                 </div>
             </article>
  
             <article>
-                <img src="./city tour.jpg" alt="servicio city tour">
+                <img src="./city tour.webp" alt="servicio city tour">
                 <div class="text">
                     <h3>Servicio City Tour</h3>
                     <p>Explora la ciudad con nuestro tour exclusivo, con guías expertos que te mostrarán los lugares más emblemáticos.</p>
-                    <a href="./paginas/Servicio-Transporte/Servicio-Citytour/index.html"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20city-tour"><button>Cotizar ahora</button></a>
                 </div>
             </article>
         </main>
@@ -90,34 +90,34 @@
 
     <!--Destino Turistico-->
     <div class="our-services">
-        <h1 id="Destino-Turistico">Servicio Turistico</h1>
+        <h1 id="Destino-Turistico">Servicio Turístico</h1>
     </div>
     <div class="container">
         <main class="grid">
-            <article>
-                <img src="./nac.jpg" alt="destinos nacionales">
+            <article id="turs">
+                <img src="./nac.webp" alt="destinos nacionales">
                 <div class="text">
                     <h3>Destino Nacionales</h3>
                     <p>Explora los destinos nacionales con nuestro servicio de turismo personalizado, descubre lo mejor de nuestro territorio peruano con experiencias inolvidables.</p>
-                    <a href="./paginas/Destino-Turistico/Nacionales/index.html"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20nacional"><button style="background: #D9DC58;">Cotizar ahora</button></a>
                 </div>
             </article>
 
             <article>
-                <img src="./full.jpg" alt="destinos fullDays">
+                <img src="./full.webp" alt="destinos fullDays">
                 <div class="text">
                     <h3>Destino FullDays</h3>
                     <p>Descubre destinos locales en un día con nuestro servicio de transporte turístico, disfruta de experiencias únicas y aventuras memorables.</p>
-                    <a href="./paginas/Destino-Turistico/FullDay/index.html"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20full-day"><button style="background: #D9DC58;">Cotizar ahora</button></a>
                 </div>
             </article>
 
-            <article>
-                <img src="./escolar.jpg" alt="turismo escolar">
+            <article id="turs1">
+                <img src="./escolar.webp" alt="turismo escolar">
                 <div class="text">
                     <h3>Turismo Escolar</h3>
                     <p>Experiencias educativas inolvidables para estudiantes. Descubre destinos fascinantes con nuestro servicio de turismo escolar.</p>
-                    <a href="./paginas/Destino-Turistico/Escolar/index.html"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20transporte%20escolar"><button style="background: #D9DC58;">Cotizar ahora</button></a>
                 </div>
             </article>
         </main>
