--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
             <a href="" class="social-icon"></a>
         </div>
         <ul class="footer-menu-container">
-            <li class="menu-item">Inicio</li>
-            <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio de Transporte</li>
-            <li class="menu-item">Contacto</li>
+            <li class="menu-item"><a href="../../index.html">Inicio</a></li>
+            <li class="menu-item"><a href="../Nosotros/index.html">Nosotros</a></li>
+            <li class="menu-item"><a href="../Servicios/index.html">Servicio de Transporte</a></li>
+            <li class="menu-item"><a href="../Contacto/index.html">Contacto</a></li>
         </ul>
         <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
