--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -55,7 +55,10 @@
                 <div class="text">
                     <h3>Servicio Traslado</h3>
                     <p>Viajes seguros y cómodos. Reserva ahora para un transporte confiable y puntual. ¡Disfruta de un viaje sin preocupaciones!</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20transporte" target="_blank"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20transporte" target="_blank">
+                        <button>
+                            <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button>
+                        </a>
                 </div>
             </article>
 
@@ -64,7 +67,8 @@
                 <div class="text">
                     <h3>Servicio Personalizados</h3>
                     <p>Ofrecemos una atención exclusiva, adaptándonos a tus necesidades para un servicio personalizado excepcional.</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%personalizado"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%personalizado"><button>
+                        <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
 
@@ -73,7 +77,8 @@
                 <div class="text">
                     <h3>servicio de carga</h3>
                     <p>Aseguramos la puntualidad y seguridad de tus envíos de carga con nuestro servicio logístico personalizado y confiable. </p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20carga"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20carga"><button>
+                        <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
  
@@ -82,7 +87,8 @@
                 <div class="text">
                     <h3>Servicio City Tour</h3>
                     <p>Explora la ciudad con nuestro tour exclusivo, con guías expertos que te mostrarán los lugares más emblemáticos.</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20city-tour"><button>Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20city-tour"><button>
+                        <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
         </main>
@@ -99,7 +105,7 @@
                 <div class="text">
                     <h3>Destino Nacionales</h3>
                     <p>Explora los destinos nacionales con nuestro servicio de turismo personalizado, descubre lo mejor de nuestro territorio peruano con experiencias inolvidables.</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20nacional"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20nacional"><button style="background: #D9DC58;"><img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
 
@@ -108,7 +114,7 @@
                 <div class="text">
                     <h3>Destino FullDays</h3>
                     <p>Descubre destinos locales en un día con nuestro servicio de transporte turístico, disfruta de experiencias únicas y aventuras memorables.</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20full-day"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20full-day"><button style="background: #D9DC58;"><img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
 
@@ -117,7 +123,7 @@
                 <div class="text">
                     <h3>Turismo Escolar</h3>
                     <p>Experiencias educativas inolvidables para estudiantes. Descubre destinos fascinantes con nuestro servicio de turismo escolar.</p>
-                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20transporte%20escolar"><button style="background: #D9DC58;">Cotizar ahora</button></a>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20transporte%20escolar"><button style="background: #D9DC58;"><img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
         </main>
@@ -141,10 +147,10 @@
             <a href="" class="social-icon"></a>
         </div>
         <ul class="footer-menu-container">
-            <li class="menu-item">Inicio</li>
-            <li class="menu-item">Nosotros</li>
-            <li class="menu-item">Servicio de Transporte</li>
-            <li class="menu-item">Contacto</li>
+            <li class="menu-item"><a href="../../index.html">Inicio</a></li>
+            <li class="menu-item"><a href="../Nosotros/index.html">Nosotros</a></li>
+            <li class="menu-item"><a href="../Servicios/index.html">Servicio de Transporte</a></li>
+            <li class="menu-item"><a href="../Contacto/index.html">Contacto</a></li>
         </ul>
         <span class="copyright">&copy;2024 Todos los derechos reservados - <strong>Bervic Tours</strong></span>
     </footer>
