--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -91,6 +91,16 @@
                         <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
+
+            <article>
+                <img src="./cole.webp" alt="servicio de transporte escolar">
+                <div class="text">
+                    <h3>Transporte Escolar</h3>
+                    <p>Ofrecemos un confiable y seguro servicio de transporte escolar para garantizar la tranquilidad de los padres y la puntualidad de los estudiantes</p>
+                    <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20transporte%20escolar"><button>
+                        <img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
+                </div>
+            </article>
         </main>
     </div>
 
@@ -104,7 +114,7 @@
                 <img src="./nac.webp" alt="destinos nacionales">
                 <div class="text">
                     <h3>Destino Nacionales</h3>
-                    <p>Explora los destinos nacionales con nuestro servicio de turismo personalizado, descubre lo mejor de nuestro territorio peruano con experiencias inolvidables.</p>
+                    <p>Descubre y explora lo mejor de nuestro territorio peruano con nuestro servicio de turismo Bervic.</p>
                     <a href="https://wa.me/923329124?text=Deseo%20cotizar%20un%20servicio%20de%20turismo%20nacional"><button style="background: #D9DC58;"><img src="./wts.webp" alt="icono de whastApp" id="wts">Cotizar ahora</button></a>
                 </div>
             </article>
