--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+
+    <!-- HTML Meta Tags -->
+    <title>EMPRESA DE TRANSPORTE Y TURISMO BERVIC</title>
+    <meta name="description" content="Somos BERVIC, tu compañía de transporte y turismo de confianza. Nos destacamos por ofrecer experiencias únicas y personalizadas que te llevarán a descubrir los sitios más fascinantes del Perú. Nuestro enfoque de la excelencia y calidad va de la mano con nuestros valores, es por ello que, en BERVIC nos comprometemos a hacer de cada viaje una aventura segura e inolvidable. ¡Explora nuestro Perú con nosotros y déjate sorprender!">
+
+    <meta name="keywords" content="Empresa Bervic, servicio de trasporte, servicio turístico, servicio de traslado, transporte escolar, traslado de personal, transporte de carga, servicio de carga, servicio escolar, destinos nacionales, fullDay, turismo full-day, city-tour, citytours, servicio personalizado, traslado personalizado, turismo escolar">
+
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="https //stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +19,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./img/bervic.png" alt="Logo">
+            <a href="./index.html"><img src="./img/bervic.png" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
