--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -11,7 +11,7 @@
     <!--Cabecera--> 
     <header>
         <div class="logo">
-            <img src="../../img/bervic.png" alt="Logo">
+            <a href="../../index.html"><img src="../../img/bervic.png" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
