--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="Empresa Bervic, servicio de trasporte, servicio turístico, servicio de traslado, transporte escolar, traslado de personal, transporte de carga, servicio de carga, servicio escolar, destinos nacionales, fullDay, turismo full-day, city-tour, citytours, servicio personalizado, traslado personalizado, turismo escolar">
 
     <link rel="stylesheet" href="swiper-bundle.min.css">
+    <link rel="icon" href="./img/bervic.png" type="image/x-icon">
     <link rel="stylesheet" href="https //stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -19,7 +20,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html"><img src="./img/bervic.png" alt="Logo"></a>
+            <a href="./index.html"><img src="./img/bervic.webp" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -212,7 +213,7 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="./img/bervic.png" alt="" class="logo1">
+        <img src="./img/bervic.webp" alt="" class="logo1">
         <div class="social-icons-container">
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
