--- a/paginas/Contacto/index.html
+++ b/paginas/Contacto/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css" integrity="sha384-BY+fdrpOd3gfeRvTSMT+VUZmA728cfF9Z2G42xpaRkUGu2i3DyzpTURDo5A6CaLK" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../../img/bervic.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Contacto</title>
+    <title>CONTACTO - EMPRESA DE TRANSPORTE Y TURISMO BERVIC</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <!--Cabecera-->
     <header>
         <div class="logo">
-            <a href="../../index.html"><img src="../../img/bervic.png" alt="Logo"></a>
+            <a href="../../index.html"><img src="../../img/bervic.webp" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -123,7 +124,7 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="../../img/bervic.png" alt="" class="logo1">
+        <a href="../../index.html"><img src="../../img/bervic.webp" alt="" class="logo1"></a>
         <div class="social-icons-container">
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
