--- a/paginas/Nosotros/index.html
+++ b/paginas/Nosotros/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>NOSOTROS - EMPRESA DE TRANSPORTE Y TURISMO BERVIC</title>
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="https //stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../../img/bervic.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
@@ -14,7 +15,7 @@
      <!--Cabecera-->
     <header>
         <div class="logo">
-            <a href="../../index.html"><img src="../../img/bervic.png" alt="Logo"></a>
+            <a href="../../index.html"><img src="../../img/bervic.webp" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -104,7 +105,7 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="../../img/bervic.png" alt="" class="logo1">
+        <a href="../../index.html"><img src="../../img/bervic.webp" alt="" class="logo1"></a>
         <div class="social-icons-container">
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
