--- a/paginas/Servicios/index.html
+++ b/paginas/Servicios/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="../../img/bervic.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Servicio Bervip</title>
+    <title>SERVICIOS - EMPRESA DE TRANSPORTE Y TURISMO BERVIC</title>
 </head>
 <body>
     <!--Cabecera--> 
     <header>
         <div class="logo">
-            <a href="../../index.html"><img src="../../img/bervic.png" alt="Logo"></a>
+            <a href="../../index.html"><img src="../../img/bervic.webp" alt="Logo"></a>
         </div>
         <div class="hamburguer">
             <div class="line"></div>
@@ -150,7 +151,7 @@
 
     <!--FOOTER-->
     <footer>
-        <img src="../../img/bervic.png" alt="" class="logo1">
+        <a href="../../index.html"><img src="../../img/bervic.webp" alt="" class="logo1"></a>
         <div class="social-icons-container">
             <a href="" class="social-icon"></a>
             <a href="" class="social-icon"></a>
